--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="module2.css">
+	<link rel="stylesheet" type="text/css" href="module2css.css">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
