--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1>Our Menu</h1>
+<h1>Our College Branches </h1>
 <div class="total">
   <div class ="item1">
     <section class="one" >
-	<h2 class="title-1"> Chicken</h2>
+	<h2 class="title-1"> VIT-VELLORE</h2>
 	<p >Velveting chicken. In the cooking world, the term velveting means to pass through hot oil or hot water for a brief period of cooking time. It's a popular Chinese technique that is used to lock in the meat's juices and keep it moist and tender. </p>
     </div>
   <div class = "item2">
    <section class="two" >
-	<h2 class="title-2"> Beef</h2>
+	<h2 class="title-2"> VIT-CHENNAI</h2>
 	<p >Corned beef is salt-cured brisket of beef. The term comes from the treatment of the meat with large-grained rock salt, also called "corns" of salt. ... Corned beef was popular during both World Wars, when fresh meat was rationed.</p>
    </section>
   </div> 
   <div class = "item3">
 <section class="three">
-	<h2 class="title-3"> Sushi</h2>
+	<h2 class="title-3"> VIT-AP</h2>
 	<p >Sushi is made of small pieces of raw fish that are wrapped in rice and seaweed. The seaweed, called nori, is collected with submerged bamboo nets. While some sushi is mass-produced using robots, the best sushi is made by hand. ... Finally, the roll is wrapped up with some of the nori.</p>
 </section>
 </div>
