--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<title>
-		restaurant
+		College
 	</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,18 +16,18 @@
   <div class ="item1">
     <section class="one" >
 	<h2 class="title-1"> VIT-VELLORE</h2>
-	<p >Velveting chicken. In the cooking world, the term velveting means to pass through hot oil or hot water for a brief period of cooking time. It's a popular Chinese technique that is used to lock in the meat's juices and keep it moist and tender. </p>
+	<p >Vellore Institute of Technology is a private university located in Vellore, Tamil Nadu, India. Founded in 1984, as Vellore Engineering College, by G. Viswanathan, the institution offers 20 undergraduate, 34 postgraduate, four integrated and four research programs. </p>
     </div>
   <div class = "item2">
    <section class="two" >
 	<h2 class="title-2"> VIT-CHENNAI</h2>
-	<p >Corned beef is salt-cured brisket of beef. The term comes from the treatment of the meat with large-grained rock salt, also called "corns" of salt. ... Corned beef was popular during both World Wars, when fresh meat was rationed.</p>
+	<p >Established in 1984 under a UGC Act, Vellore Institute of Technology is accredited by NAAC with an A grade. The eco-friendly Chennai campus hosts around </p>
    </section>
   </div> 
   <div class = "item3">
 <section class="three">
 	<h2 class="title-3"> VIT-AP</h2>
-	<p >Sushi is made of small pieces of raw fish that are wrapped in rice and seaweed. The seaweed, called nori, is collected with submerged bamboo nets. While some sushi is mass-produced using robots, the best sushi is made by hand. ... Finally, the roll is wrapped up with some of the nori.</p>
+	<p >VIT-AP University is a private university located in Amaravati, the capital of Andhra Pradesh, India. It is the first university located in the capital region.</p>
 </section>
 </div>
 </div>
