--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1>Our College Branches </h1>
+<h1>VIT College Branches </h1>
 <div class="total">
   <div class ="item1">
     <section class="one" >
-	<h2 class="title-1"> VIT-VELLORE</h2>
+	<h2 class="title-1"> VELLORE</h2>
 	<p >Vellore Institute of Technology is a private university located in Vellore, Tamil Nadu, India. Founded in 1984, as Vellore Engineering College, by G. Viswanathan, the institution offers 20 undergraduate, 34 postgraduate, four integrated and four research programs. </p>
     </div>
   <div class = "item2">
    <section class="two" >
-	<h2 class="title-2"> VIT-CHENNAI</h2>
+	<h2 class="title-2"> CHENNAI</h2>
 	<p >Established in 1984 under a UGC Act, Vellore Institute of Technology is accredited by NAAC with an A grade. The eco-friendly Chennai campus hosts around </p>
    </section>
   </div> 
   <div class = "item3">
 <section class="three">
-	<h2 class="title-3"> VIT-AP</h2>
+	<h2 class="title-3"> AMARAVATHI</h2>
 	<p >VIT-AP University is a private university located in Amaravati, the capital of Andhra Pradesh, India. It is the first university located in the capital region.</p>
 </section>
 </div>
